syntax = "proto3";

package catalogservice;

option go_package = ".;catalogservice";

message CreateRestaurantRequest {
  string name = 1;
  double latitude = 2;
  double longitude = 3;
}

message MenuItem {
  uint64 id = 1;
  string name = 2;
  uint64 restaurant_id = 3;
  double price = 4;
  int32 stock = 5;
}

message Restaurant {
  uint64 id = 1;
  string name = 2;
  double latitude = 3;
  double longitude = 4;
  repeated MenuItem menu_items = 5;
}

message GetRestaurantRequest {
  uint64 id = 1;
}

message GetRestaurantsByNameRequest {
  string name = 1;
}

message GetRestaurantsResponse {
  repeated Restaurant restaurants = 1;
}

message CreateMenuItemRequest {
  string name = 1;
  uint64 restaurant_id = 2;
  double price = 3;
  int32 stock = 4;
}

message GetMenuItemRequest {
  uint64 id = 1;
}

message GetMenuItemsByRestaurantIdRequest {
  uint64 restaurant_id = 1;
}

message GetMenuItemsResponse {
  repeated MenuItem menu_items = 1;
}

service CatalogService { 
  rpc CreateRestaurant(CreateRestaurantRequest) returns (Restaurant);
  rpc GetRestaurantById(GetRestaurantRequest) returns (Restaurant);
  rpc GetRestaurantsByName(GetRestaurantsByNameRequest) returns (GetRestaurantsResponse);
  rpc GetRestaurants(google.protobuf.Empty) returns (GetRestaurantsResponse);
  rpc CreateMenuItem(CreateMenuItemRequest) returns (MenuItem);
  rpc GetMenuItemById(GetMenuItemRequest) returns (MenuItem);
  rpc GetMenuItemsByRestaurantId(GetMenuItemsByRestaurantIdRequest) returns (GetMenuItemsResponse);
}

import "google/protobuf/empty.proto";